--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,7 @@
 {% block nav_home_active %}active{% endblock %}
 
 {% block content %}
+<div style="margin-bottom: 230px;">
     <div class="jumbotron">
         <div class="container">
            <h1>欢迎访问</h1>
@@ -24,6 +25,8 @@
             {% endif %}
         </div>
     </div>
+</div>
+
     <!-- 图表容器 DOM
     <div id="container">
     <div class="hot-data">
